--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,3 +29,10 @@ section#telefone {
     width: 311px;
     background: url("../imagens/frame-iphone.png") no-repeat;
 }
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 20px; 
+    height: 469px;
+    width: 269px;
+}
