--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,20 @@ iframe#tela {
     height: 469px;
     width: 269px;
 }
+section#redes-sociais {
+    float: right;
+    padding-top: 85px;
+}
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.400);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover {
+    border: 1px solid rgba(255, 255, 255, 0.6);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.600);
+    transition: transform 0.5s, border 1s;
+}
